--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -1,8 +1,17 @@
+* Functionality
+** TODO users							       :comp:
+** TODO users own a deck 					       :comp:
+* Pretty
+** TODO quiz: bigger font, make buttons not move 		       :comp:
+
+* Other
+** TODO automate database creation, data import 		       :comp:
 * Tasks 3/11
 ** DONE can i input thai characters in to the database?		       :comp:
 ** DONE bigger input box					       :comp:
 ** DONE make a 'deck' with many cards				       :comp:
 * Tasks 3/13
+  
 ** DONE watch complex forms part 3				       :comp:
 * Tasks 3/15
 ** DONE apply complex forms part 3 to flashcards2		       :comp:
@@ -11,9 +20,9 @@
 * Tasks 3/20
 ** DONE test on each card in a deck				       :comp:
 * Tasks 3/21
-** TODO model for a quiz session?
+** DONE model for a quiz session?
 * Tasks 3/22
 ** DONE quiz.rb in lib
-** TODO github
+** DONE github
 * Tasks 3/24
-** TODO clean up quiz stuff 					       :comp:
+** DONE clean up quiz stuff					       :comp:
