--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -1,8 +1,10 @@
 * Functionality
 ** DONE users							       :comp:
-** TODO users own a deck 					       :comp:
+** DONE users own a deck					       :comp:
 ** DONE login/logout links on every page (application layout)	       :comp:
 ** TODO destroy cards on destroy deck 				       :comp:
+** TODO in users/#/decks show only owned decks			       :comp:
+** TODO page to show all decks 					       :comp:
 * Pretty
 ** TODO quiz: bigger font, make buttons not move 		       :comp:
 
