--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -3,8 +3,12 @@
 ** DONE users own a deck					       :comp:
 ** DONE login/logout links on every page (application layout)	       :comp:
 ** TODO destroy cards on destroy deck 				       :comp:
-** TODO in users/#/decks show only owned decks			       :comp:
+** DONE in users/#/decks show only owned decks			       :comp:
 ** TODO page to show all decks 					       :comp:
+** TODO only logged in can create new deck			       :comp:
+** TODO view for 'my' decks					       :comp:
+** DONE users view to each of their decks			       :comp:
+** TODO in quiz, a way to escape 				       :comp:
 * Pretty
 ** TODO quiz: bigger font, make buttons not move 		       :comp:
 
