--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -11,9 +11,9 @@
 ** DONE in quiz, a way to escape				       :comp:
 ** TODO escape user html 					       :comp:
 ** DONE front page should link to quiz controller		       :comp:
-** TODO fix up quiz controller, need to create new quiz more often     :comp:
-** TODO home page should show quiz/index			       :comp:
-** TODO revert deck index action 				       :comp:
+** DONE fix up quiz controller, need to create new quiz more often     :comp:
+** DONE home page should show quiz/index			       :comp:
+** DONE revert deck index action				       :comp:
 * Pretty
 ** TODO quiz: bigger font, make buttons not move 		       :comp:
 
