--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -6,7 +6,7 @@
 ** DONE in users/#/decks show only owned decks			       :comp:
 ** DONE page to show all decks					       :comp:
 ** DONE only logged in can create edit anything			       :comp:
-** TODO view for 'my' decks					       :comp:
+** DONE view for 'my' decks					       :comp:
 ** DONE users view to each of their decks			       :comp:
 ** DONE in quiz, a way to escape				       :comp:
 ** TODO escape user html 					       :comp:
@@ -14,8 +14,9 @@
 ** DONE fix up quiz controller, need to create new quiz more often     :comp:
 ** DONE home page should show quiz/index			       :comp:
 ** DONE revert deck index action				       :comp:
-** TODO differentiate between admin(me)/non-admin users		       :comp:
-** TODO authorization for users to edit their own decks only 	       :comp:
+** DONE differentiate between admin(me)/non-admin users		       :comp:
+** DONE authorization for users to edit their own decks only	       :comp:
+** TODO make sure no one can edit decks model directly 		       :comp:
 * Pretty
 ** TODO quiz: bigger font, make buttons not move 		       :comp:
 
