--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -16,11 +16,11 @@
 ** DONE revert deck index action				       :comp:
 ** DONE differentiate between admin(me)/non-admin users		       :comp:
 ** DONE authorization for users to edit their own decks only	       :comp:
-** TODO make sure no one can edit decks model directly 		       :comp:
+** DONE make sure no one can edit cards model directly 		       :comp:
 * Pretty
 ** TODO quiz: bigger font, make buttons not move 		       :comp:
 
 * Other
 ** TODO automate database creation, data import 		       :comp:
-** TODO add thai consonants part 1/2/3/4 			       :comp:
+** TODO add thai consonants part 2/3/4 				       :comp:
 ** TODO play with an emacs rails package 			       :comp:
