--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -35,7 +35,7 @@
 
 ** DONE play w/ various length cards, see how well they work	       :comp:
 
-** TODO title and navigation don't seem to be centered together        :comp:
+** DONE title and navigation don't seem to be centered together	       :comp:
 * Other
 ** TODO automate database creation, data import 		       :comp:
 ** DONE add thai consonants part 2/3/4				       :comp:
