--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -17,8 +17,10 @@
 ** DONE differentiate between admin(me)/non-admin users		       :comp:
 ** DONE authorization for users to edit their own decks only	       :comp:
 ** DONE make sure no one can edit cards model directly 		       :comp:
-** TODO quiz: refreshing page should not go to next card 	       :comp:
-** TODO let users opt to share or not share their decks 	       :comp:
+** DONE quiz: refreshing page should not go to next card	       :comp:
+** DONE let users opt to share or not share their decks		       :comp:
+** TODO quiz view update should be AJAX				       :comp:
+** TODO front page lists decks BY user, first 5 or so only, and a link to more  :comp:
 * Pretty
 ** DONE quiz: bigger font, make buttons not move		       :comp:
 
@@ -36,7 +38,10 @@
 ** DONE play w/ various length cards, see how well they work	       :comp:
 
 ** DONE title and navigation don't seem to be centered together	       :comp:
+
+** DONE fix deck editing view					       :comp:
 * Other
 ** TODO automate database creation, data import 		       :comp:
 ** DONE add thai consonants part 2/3/4				       :comp:
 ** TODO play with an emacs rails package 			       :comp:
+** TODO ask ben: why does my find only work w/ true and 0? 	       :comp:
