--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -9,7 +9,7 @@
 ** DONE view for 'my' decks					       :comp:
 ** DONE users view to each of their decks			       :comp:
 ** DONE in quiz, a way to escape				       :comp:
-** TODO escape user html 					       :comp:
+** DONE escape user html					       :comp:
 ** DONE front page should link to quiz controller		       :comp:
 ** DONE fix up quiz controller, need to create new quiz more often     :comp:
 ** DONE home page should show quiz/index			       :comp:
@@ -45,3 +45,4 @@
 ** DONE add thai consonants part 2/3/4				       :comp:
 ** TODO play with an emacs rails package 			       :comp:
 ** TODO ask ben: why does my find only work w/ true and 0? 	       :comp:
+** TODO register domain 					       :comp:
