added a button to play a sound for a card, currently plays the same sound each time

--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -1,3 +1,11 @@
+* Sounds
+** DONE record some sounds					       :comp:
+** TODO how to get sounds in db? 				       :comp:
+** TODO migration to add sounds/etc.				       :comp:
+** TODO update card edit to upload sounds			       :comp:
+** TODO 'play sound' button in quiz should look up sound from db, not just point at one file  :comp:
+
+
 * Functionality
 ** DONE users							       :comp:
 ** DONE users own a deck					       :comp:
@@ -43,24 +51,24 @@
 
 ** DONE fix deck editing view					       :comp:
 
-** TODO more dynamic card text size 				 :comp:today:
+** TODO more dynamic card text size				       :comp:
 
-** TODO make nicer navigation buttons (click on cards?)		 :comp:today:
+** TODO make nicer navigation buttons (click on cards?)		  :comp:wait:
 ** DONE register/login/etc. in upper right, small		       :comp:
 ** DONE sidebar navigation					       :comp:
-** TODO graphical logo (talk to wife) 				       :comp:
+** TODO graphical logo (talk to wife)				  :comp:wait:
 * Data
-** TODO fix vowels: part 1 add or ang, fix double little b's	 :comp:today:
+** TODO fix vowels: part 1 add or ang, fix double little b's	       :comp:
 ** TODO automate database creation, data import 		       :comp:
 
 * Other
 ** DONE enter vowels						       :comp:
 ** DONE how to embed audio? talk to anne			       :comp:
 ** DONE add thai consonants part 2/3/4				       :comp:
-** TODO play with an emacs rails package 			       :comp:
+** DONE play with an emacs rails package			       :comp:
 ** TODO ask ben: why does my find only work w/ true and 0? 	       :comp:
 ** DONE register domain						       :comp:
 ** TODO make news page 						       :comp:
 ** TODO resources page to learningthai.com: pronounciation	       :comp:
 ** TODO make about page 					       :comp:
-** TODO reverse engineer answers.com				 :comp:today:
+** DONE reverse engineer answers.com				 :comp:today:
