don't have new/edit decks forms bringing in sound file yet

--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -1,9 +1,9 @@
 * Sounds
 ** DONE record some sounds					       :comp:
-** TODO how to get sounds in db? 				       :comp:
-** TODO migration to add sounds/etc.				       :comp:
-** TODO update card edit to upload sounds			       :comp:
-** TODO 'play sound' button in quiz should look up sound from db, not just point at one file  :comp:
+** DONE how to get sounds in db?				       :comp:
+** DONE migration to add sounds/etc.				       :comp:
+** TODO update card new/edit to upload sounds			 :comp:today:
+** DONE 'play sound' button in quiz should look up sound from db, not just point at one file :comp:
 
 
 * Functionality
