--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -52,12 +52,12 @@
 
 ** DONE fix deck editing view					       :comp:
 
-** TODO more dynamic card text size				       :comp:
+** DONE more dynamic card text size				       :comp:
 
-** TODO make nicer navigation buttons (click on cards?)		  :comp:wait:
+** DONE make nicer navigation buttons (click on cards?)		  :comp:wait:
 ** DONE register/login/etc. in upper right, small		       :comp:
 ** DONE sidebar navigation					       :comp:
-** TODO graphical logo (talk to wife)				  :comp:wait:
+** DONE graphical logo (talk to wife)				  :comp:wait:
 * Data
 ** TODO fix vowels: part 1 add or ang, fix double little b's	       :comp:
 ** TODO automate database creation, data import 		       :comp:
@@ -73,3 +73,10 @@
 ** TODO resources page to learningthai.com: pronounciation	       :comp:
 ** TODO make about page 					       :comp:
 ** DONE reverse engineer answers.com				 :comp:today:
+* Bugs 2010-04-19
+** TODO cards should not be able to be blank			       :comp:
+** TODO decks should not be blank				       :comp:
+** TODO sounds should be optional add-on for card		       :comp:
+** TODO cards should have max length				       :comp:
+** TODO fix quiz font size 					       :comp:
+** TODO refreshing quiz gives next card (should not) 		       :comp:
