got multiple_choice action, basic view set up

--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -1,3 +1,5 @@
+* Multiple Choice
+** TODO 							       :comp:
 * Bugs 2010-04-19
 ** DONE cards should not be able to be blank			       :comp:
 ** DONE decks should not be blank				       :comp:
@@ -7,23 +9,9 @@
 ** TODO refreshing quiz gives next card (should not) 		       :comp:
 ** TODO uploaded audio maximum size 				       :comp:
 ** TODO disallow white-space-only decks/cards 			       :comp:
-* Ben Changes 2010-04-20
-** DONE switch card and card_sound foreign keys			       :comp:
-You have a foreign key in the wrong place.  Whichever class has the belongs_to gets the foreign key.  So, you should have a card_id in your card_sounds table, not a card_sounds_id in your cards table.  For reference, you did this correctly with the association between Decks and Users.
-
-You can see a symptom of this brokenness by starting script/console and doing something like Card.last.card_sound
-
-That should work, showing you the last Card's CardSound.  Instead, you get this:
-ActiveRecord::StatementInvalid: SQLite3::SQLException: no such column: card_sounds.card_id: SELECT * FROM "card_sounds" WHERE ("card_sounds".card_id = 1)  LIMIT 1
-
-See?  It's expecting a card_id in card_sounds, not a card_sound_id in cards.
-
-I imagine you had to do some other workarounds to actually get this to work, so make sure to do some thorough testing after changing this; it's likely that other stuff is broken.
-** TODO decks_controller.rb: L32 and L52: I'd move this logic into the model, probably something like before_save :remove_blank_cards , then def remove_blank_cards ... end :comp:
-** DONE quiz_controller.rb move card size calc to model or helper      :comp:
 * Misc
 ** TODO quiz view update should be AJAX 			       :comp:
-** TODO fix vowels: part 1 add or ang, fix double little b's	       :comp:
+** DONE fix vowels: part 1 add or ang, fix double little b's	       :comp:
 ** TODO automate database creation, data import 		       :comp:
 ** TODO make news page						 :comp:today:
 ** TODO resources page to learningthai.com: pronounciation	       :comp:
@@ -32,4 +20,9 @@ I imagine you had to do some other workarounds to actually get this to work, so 
 ** DONE fix card size for thai characters			       :comp:
 ** TODO quiz index.html need to get deck.share filter out of there, in to controller								       :comp:
 ** DONE how to edit (trim) sound files				       :comp:
-** TODO edit deck won't save sound files 			       :comp:
+** DONE edit deck won't save sound files			       :comp:
+** TODO in edit view, populate sound file box if it has a sound	       :comp:
+** TODO missing sounds: thor thong				       :comp:
+** TODO record vowels						       :comp:
+** TODO decks have 'categories', sort by them 			       :comp:
+** TODO record thor thong and vowels 				       :comp:
