--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -1,5 +1,5 @@
 * Multiple Choice
-** TODO 							       :comp:
+** TODO choices are not properly randomized (correct answer always first)  :comp:
 * Bugs 2010-04-19
 ** DONE cards should not be able to be blank			       :comp:
 ** DONE decks should not be blank				       :comp:
