--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -1,8 +1,9 @@
 * Multiple Choice
 ** DONE choices are not properly randomized (correct answer always first) :comp:
-** TODO correct answer can show up twice			       :comp:
+** DONE correct answer can show up twice			       :comp:
 ** DONE choice links need to pass answer=id of some sort	       :comp:
 ** TODO clean up game, var names, session var names 		       :comp:
+** TODO inform user of progress, and how many total 		       :comp:
 * Bugs 2010-04-19
 ** DONE cards should not be able to be blank			       :comp:
 ** DONE decks should not be blank				       :comp:
