tell user what correct answer was, if he was wrong

--- a/notes/tasks.org
+++ b/notes/tasks.org
@@ -3,8 +3,9 @@
 ** DONE correct answer can show up twice			       :comp:
 ** DONE choice links need to pass answer=id of some sort	       :comp:
 ** DONE clean up game, var names, session var names		       :comp:
-** TODO inform user of progress, and how many total 		       :comp:
+** DONE inform user of progress, and how many total		       :comp:
 ** TODO if wrong, tell user what was correct 			       :comp:
+** DONE tell user end results					       :comp:
 * Bugs 2010-04-19
 ** DONE cards should not be able to be blank			       :comp:
 ** DONE decks should not be blank				       :comp:
